<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_float">.</string>
    
    <string name="operator_plux">+</string>
    <string name="operator_minus">-</string>
    <string name="operator_multi">*</string>
    <string name="operator_divide">/</string>
    <string name="operator_equal">=</string>
    
    <string name="action_clear">Clear</string>
    <string name="action_backspace">Backspace</string>
    

</resources>
