<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" >

        <EditText
            android:id="@+id/result_id"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Btnclear_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btnclearClicked"
            android:text="@string/action_clear" />
        
        <Button
            android:id="@+id/Btnback_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btnbkClicked"
            android:text="@string/action_backspace" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Btn7_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn7Clicked"
            android:text="@string/number_7" />

        <Button
            android:id="@+id/Btn8_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn8Clicked"
            android:text="@string/number_8" />

        <Button
            android:id="@+id/Btn9_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn9Clicked"
            android:text="@string/number_9" />

        <Button
            android:id="@+id/Btndivide_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btndivideClicked"
            android:text="/" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Btn4_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn4Clicked"
            android:text="@string/number_4" />

        <Button
            android:id="@+id/Btn5_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn5Clicked"
            android:text="@string/number_5" />

        <Button
            android:id="@+id/Btn6_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn6Clicked"
            android:text="@string/number_6" />

        <Button
            android:id="@+id/Btnmulti_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btnmultiClicked"
            android:text="@string/operator_multi" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Btn1_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn1Clicked"
            android:text="@string/number_1" />

        <Button
            android:id="@+id/Btn2_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn2Clicked"
            android:text="@string/number_2" />

        <Button
            android:id="@+id/Btn3_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn3Clicked"
            android:text="@string/number_3" />

        <Button
            android:id="@+id/Btnminus_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/operator_minus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btnfloatClicked"
            android:text="@string/number_float" />
        
        <Button
            android:id="@+id/Btn0_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btn0Clicked"
            android:text="@string/number_0" />

        <Button
            android:id="@+id/Btnequal_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btnequalClicked"
            android:text="@string/operator_equal" />

        <Button
            android:id="@+id/Btnplus_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="btnplusClicked"
           android:text="@string/operator_plux" />
        
    </LinearLayout>

</LinearLayout>